# Arithmos

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_gcd.c  bench_gcd.s  bench_gcd_normal.s  bench_gcd_optimized.s  compare_bench.sh
bench/numeric/power/: CMakeLists.txt  bench_power_mod_i32.cpp
build_base/: CMakeCache.txt  Makefile  cmake_install.cmake
build_base/src/: Makefile  cmake_install.cmake
build_base/src/numeric/: Makefile  cmake_install.cmake
build_base/src/numeric/abs/: Makefile  cmake_install.cmake
build_base/src/numeric/gcd/: Makefile  cmake_install.cmake
build_base/src/numeric/lcm/: Makefile  cmake_install.cmake
build_base/src/numeric/multiply/: Makefile  cmake_install.cmake
build_base/src/numeric/power/: Makefile  cmake_install.cmake
include/arithmos/: arithmos.h  geometry.h  number_theory.h
include/arithmos/algebra/: algebra.h
include/arithmos/core/: core.h  limits.h  types.h
include/arithmos/number-theory/: big_int.h  gcd.h  int128.h  lcm.h  power.h  rational.h
include/arithmos/numeric/: abs.h  gcd.h  lcm.h  multiply.h  numeric.h  power.h
src/: CMakeLists.txt  bit_operations.h  builtin.h  cpu_features.h  expect.h  inline.h
src/algebra/: CMakeLists.txt
src/geometry/: CMakeLists.txt
src/number-theory/: CMakeLists.txt  big_int.c  gcd.c  int128.c  lcm.c  power.c  rational.c
src/numeric/: CMakeLists.txt  numeric_internal.h
src/numeric/abs/: CMakeLists.txt  abs_i32.c  abs_i64.c  unsigned_abs_i32.c  unsigned_abs_i64.c
src/numeric/gcd/: CMakeLists.txt  gcd_i32.c  gcd_i64.c  gcd_u32.c  gcd_u64.c
src/numeric/lcm/: CMakeLists.txt  lcm_i32.c  lcm_i64.c  lcm_u32.c  lcm_u64.c
src/numeric/multiply/: CMakeLists.txt  mod_mul_i32.c  mod_mul_i64.c  mod_mul_u32.c  mod_mul_u64.c  multiply_i64.c  multiply_u64.c
src/numeric/power/: CMakeLists.txt  power_i32.c  power_i64.c  power_mod_i32.c  power_mod_i64.c  power_mod_u32.c  power_mod_u64.c  power_u32.c  power_u64.c
test/: CMakeLists.txt  test_big_int.c  test_fun.c  test_gcd.c  test_lcm.c  test_power.c  test_rational.c
tests/: CMakeLists.txt
tests/numeric/: test_abs.c  test_gcd.c  test_lcm.c  test_multiply.c  test_power.c
